--- a/PaperPartI_Feb2017.tex
+++ b/PaperPartI_Feb2017.tex
@@ -79,12 +79,38 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 \documentclass[preprint,5p,times]{elsarticle}
 %\documentclass[2015,preprint,review,12pt]{elsarticle}
+%%%%%%%\usepackage{amssymb}
+%%%%%%%\usepackage{amsmath}
+%%%%%%%\usepackage{epsfig}
+%%%%%%%\usepackage{url}
+%%%%%%%\usepackage{float}
+\journal{International Journal of Impact Engineering}
+\usepackage{graphicx}
+\usepackage{mathptmx}
+\usepackage[font=small,format=hang,labelfont=bf]{caption} 
+\usepackage{gensymb}
+\usepackage{enumerate}
+\usepackage{epigraph}
+\usepackage{titlesec}
+\usepackage{cleveref}
+\usepackage{scrextend}
+\usepackage[english]{babel}
+\usepackage[normalem]{ulem}
+\usepackage{setspace}
+\onehalfspacing
+%\doublespacing
+%From elsevier
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{epsfig}
 \usepackage{url}
 \usepackage{float}
-\journal{International Journal of Impact Engineering}
+\usepackage{tabularx}
+\usepackage{cancel}
+\usepackage{booktabs}
+\usepackage{subfigure}
+\usepackage{units}
+
 %\hyphenation{*LOAD\_-BLAST\_-ENHANCED}
 \begin{document}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
@@ -334,7 +360,7 @@ Thermocouples were positioned at the centre of the plate (150 mm in RD) at a fix
 	\label{fig:Thermocouples}
 \end{figure} 
 
-Welding was carried out with a conventional tool featuring a tri-flat tapered pin. The tool dimensions were: 18 mm shoulder diameter with a 2\degree concave angle, 5.8 mm pin length featuring a pin root diameter of 6.2 mm and a pin tip diameter of 4.5 mm. Welding was carried out with a rake angle of 10\degree, tool rotation speed of 1000 RPM and a tool advance speed of 100 $\text{mm}\!\cdot\!\text{min}^{-1}$. The initial plunge speed was set to 10 $\text{mm}\!\cdot\!\text{min}^{-1}$ and a dwell time of 10 s, whilst the tool extraction speed was set to 10 $\text{mm}\!\cdot\!\text{min}^{-1}$. In total, a weld of 200 mm length was carried out parallel to RD. The measured average tool downforce was approximately 20 kN. Welding was carried out by the University of Manchester with a Crawford-Swift FSW machine with the tool in position control mode.
+Welding was carried out with a conventional tool featuring a tri-flat tapered pin. The tool dimensions were: 18 mm shoulder diameter with a 2 \degree concave angle, 5.8 mm pin length featuring a pin root diameter of 6.2 mm and a pin tip diameter of 4.5 mm. Welding was carried out with a rake angle of 10 \degree, tool rotation speed of 1000 RPM and a tool advance speed of 100 $\text{mm}\!\cdot\!\text{min}^{-1}$. The initial plunge speed was set to 10 $\text{mm}\!\cdot\!\text{min}^{-1}$ and a dwell time of 10 s, whilst the tool extraction speed was set to 10 $\text{mm}\!\cdot\!\text{min}^{-1}$. In total, a weld of 200 mm length was carried out parallel to RD. The measured average tool downforce was approximately 20 kN. Welding was carried out by the University of Manchester with a Crawford-Swift FSW machine with the tool in position control mode.
 
 %Bead on plate FSW was carried out on 2139-T8 alloy where the work-piece dimensions are 150x300x6.35 mm. Welding was carried out with a conventional tool with triflat pin set at a 2$^\circ$ rake angle. The tool dimensions were: 18 mm shoulder diameter; 2$^\circ$ shoulder concave angle; 6.2 mm pin root diameter; 5.85 mm pin height; 4 mm pin tip diameter. The weld settings were: 100 $\text{mm}\!\cdot\!\text{min}^{-1}$ traverse speed; 1000 RPM rotation speed; 16 kN downforce. The welds were carried out with the tool in force control mode. 
 \subsection{Tensile Tesing of FSW 2139-T8}
@@ -470,7 +496,7 @@ For simulation 9, the global strain distribution is presented in figure \ref{fig
 \label{Discussion}
 In this discussion, focus shall be given to interpreting the predicted deformation response of the weld under loading in comparison to the experimentally measured response. This enables the effect of the user input mechanical property distribution to be understood more readily. The discussion highlights some of the practical difficulties and limitations in both applying the lumped mass method and interpreting numerical predictions based on the associated assumptions. Furthermore, the discussion identifies some key requirements, in terms of defining complex mechanical property distributions, which are necessary for accurate and reliable predictions of the local strain distribution. Moreover, the discussion provides insight to the true distribution of mechanical properties within an actual weld, and its relationship with microstructure.
 
-\subsubsection{Interpretation of experimental results}
+\subsection{Interpretation of experimental results}
 \label{SMDModellingstudyDiscussionReality}
 From the experimentally measured axial strain distributions, on both a macro and more local scale, it is clear that initial yielding occurs across both the TMAZ and nugget. The measured local axial strain distribution suggests that axial strain maybe slightly higher within the TMAZ, though the distribution is relatively uniform over these two regions. Nevertheless, the observed initial yielding response is consistent with directly comparable experimental data presented by McWilliams et al. \cite{McWilliams2013} Moreover, this observed initial response should be expected; the measured mechanical properties from representative weld material, as presented in \S\ref{RADMechPropsResultsQS} chapter \ref{ResultsMicrostructure}, suggest that initial yield stress is lowest within the TMAZ/nugget region. It is useful to note at this point that despite the minimum hardness in the weld being within the HAZ, initial yielding occurs in the TMAZ/nugget region. This indicates that the \textit{k}-parameter distribution decreases towards the centre of the weld, which is consistent with observations of the mechanical properties as estimated from the representative weld material presented in chapter \ref{ResultsMicrostructure}. This complex distribution of the $k$-parameter must, therefore, be an important consideration for accurate modelling of the non-linear weld response.  
 
@@ -489,14 +515,15 @@ Secondly, since there is a decreasing distribution in flow stress in the outer H
 
 The interpretation of measured strain distributions can be assumed to be reasonably accurate on a local scale, because DIC measurements following the method outlined in chapter \ref{ExperimentalMethods} are estimated to provide strain measurements to an accuracy of $\pm 0.05$\% strain \cite{DaFonseca2005}. The reliability of the method can be assessed by comparing the strain measurements to strain gauges or extensometers. Whilst, it is not presented here for brevity, the global engineering strain response was comparable to the response measured using an extensometer; the global engineering strains are $\pm 0.1$\%, for engineering strains of $\leq 15$\%, and $\pm 1$\%, for engineering strains of $\leq 20$\%. There is a divergence in correlation with extensometer readings at larger strains, however, the extensometer does not account for necking. It is more likely that the strain measurements are more representative of the actual response using DIC despite this apparent reduction in reliability, though this does depend on the coherency of the paint with the sample surface. Nevertheless, the interpretation of the experimentally measured response can be assumed to be fairly reliable. Moreover, the interpretation correlates with the estimated local mechanical properties and can be linked to the observed microstructural variation.
 
-\subsubsection{Interpretation of simulations based on the lumped mass method}
+\subsection{Interpretation of simulations based on the lumped mass method}
 \label{SMDModellingstudyDiscussionLumpedMassMethod}
 As will be discussed here, practical application of the lumped mass method to FSW, whether direct or in a calibrated form, as described in the literature, is not straightforward and can lead to complications from both a metallurgical perspective and a numerical modelling perspective. There is a trade-off between the metallurgical similarity of the model with the actual weld and both the numerical accuracy and reliability of the predicted results. Using direct application of the lumped mass method, metallurgical similarity is promoted, whereas through a calibrated approach, numerical accuracy is promoted. In this section, the commonly used methods are discussed based on the results described in \S\ref{SMDModellingstudyResults}. 
 
 As mentioned in \S\ref{LitRev:ModelStructuralQSMacroDistribution} chapter \ref{LitRev}, under the lumped mass method, the weld region is partitioned into distinct regions, which are representative of the nugget, TMAZ, HAZ, and parent material. Partitioning is based on the hardness distribution and observation of macrographs of the weld cross section. The distinct nugget and TMAZ region are easily determined, geometrically, from the weld macrographs, and the unaffected zone can be identified from the hardness distribution. Homogenising the elements of the mesh into the four basic regions does make logical sense from a simplified metallurgical perspective, though it is dependent on welding conditions. However, as will be discussed, from a numerical modelling perspective, this is not always appropriate, as there are unintended consequences if the assumptions of the lumped mass method are applied exactly. As a result, calibrated forms of the lumped mass method are used to accommodate the effects of these assumptions. However, there are always limitations to the results, and care must be taken during interpretation of their validity, as shall be discussed here. As a reminder, the basic assumptions of the lumped mass approach are that: yield stress scales directly with hardness; the linear coefficient relating hardness to yield stress is constant across the weld; there is no variation in work hardening behaviour across the weld.
 
 %Hugh Shercliff correction
-\paragraph{Calibration}
+%\paragraph{Calibration}
+\subsubsection{Calibration}
 \label{SMDModellingstudyResultsSims1to4Correction1Calibration}
 Simulation 1 represents direct application of the standard lumped mass method, as described in chapter \ref{LitRev}. In this case, the widths of the bulk weld region, as defined by the hardness distribution, are representative of the weld cross section from a metallurgical perspective. However, as shown in figure \ref{fig:Hvdistribution}a, the minima of the hardness distribution across the weld is neglected even though it is the point associated with strain localisation. In addition, the plastic response across the weld is assumed to be equivalent to the parent material. From a numerical perspective, key regions of the weld are neglected from the model which are sources of error.
 
@@ -508,7 +535,7 @@ Simulation 4 represents further calibration to the lumped mass method in simulat
 
 It can interpreted that calibration of the lumped mass method is performed in order to achieve good correlation between the predicted and experimentally measured global stress-strain response of the weld. Nevertheless, exact details of calibration methods are typically omitted from studies in the literature. Calibration allows important features of the weld, such as the hardness minima, to be captured using the lumped mass method. Hence, calibration is a trade-off between metallurgical similarity of the numerical model with physical reality, and known key features of the weld. However, from figure \ref{fig:LumpedMassPredictions}a-e, it is clear that application of the lumped mass method, either directly or in a state-of-the-art calibrated form, is unsuitable for 2139-T8 alloy. There are significant differences between the predicted and experimentally measured strain evolution under loading. These differences manifest primarily in the initial yield response and the geometrical evolution of strain due to work hardening; these are discussed further in the following paragraphs.
 
-\paragraph{Initial yield response}
+\subsubsection{Initial yield response}
 \label{SMDModellingstudyResultsSims1to4Correction1Initialyielding}
 The user input hardness profile is directly indicative of initial yield response, since hardness and yield stress are assumed to have a linear relationship that is constant across the weld. Therefore, in simulations 1-4, the lowest theoretical yield stress is effectively in the TMAZ, followed sequentially by the nugget, HAZ, and parent material. It is expected, therefore, that the TMAZ yields first, and as it work hardens, the increase in flow stress will allow the elements associated with the nugget to yield and accommodate deformation strain. As the flow stress in the TMAZ and nugget increases via work hardening, the elements in the HAZ will begin to yield. 
 %Since there is no variation in the input work hardening response, the distribution of axial strain is not expected to evolve, geometrically, over time; axial strain should eventually localise in the TMAZ after necking. In addition, since the user input properties are symmetric, a symmetric strain response is expected.  
@@ -521,7 +548,7 @@ Therefore, the source of the numerical error can be traced back to the calibrati
 
 In simulations 3-4, the problem of artificially increasing elemental stiffness is attenuated by increasing the effective width of the TMAZ during calibration. This procedure allows an increased number of elements to form part of the narrow TMAZ, hence, the inner-most elements are shielded from the artificially increased stiffness effect. Figure \ref{fig:LumpedMassPredictions}d-e show that initial yielding occurs in the elements associated with the hardness minima, and that deformation is subsequently accommodated in the elements of the nugget after work hardening, as expected. 
 
-\paragraph{Non-linear response} 
+\subsubsection{Non-linear response} 
 \label{SMDModellingstudyResultsSims1to4Correction1Plasticity}
 Generally, in the lumped mass method, work hardening variation in the weld is ignored, however, it can be included as part of the state-of-the-art lumped mass approach. Neglecting work hardening variation is a conservative simplification that is applied to speed up the modelling process. As described in \S\ref{SMDModellingstudyDiscussionReality}, the distribution of work hardening properties is responsible for causing geometrical evolution of strain distribution and strain localisation before failure. It is reasonable to suppose that all models neglecting the work hardening property distribution would not demonstrate this geometrical evolution of strain (i.e. simulations 1-3) and vice versa (simulation 4). However, figure \ref{fig:LumpedMassPredictions}b-e all indicate that significant geometrical strain evolution does not occur either with or without the user input distribution of work hardening properties. The first observation here is that in simulations 1-4, the distribution of plastic strain post yielding remains geometrically consistent throughout the length of the simulation. 
 
@@ -531,7 +558,7 @@ A third observation, from simulations 3-4, is that the lumped mass method appear
 
 Alternatively, this asymmetry in predicted strain distribution may be due to a numerical instability, which occurs in elements with large strains. In the FE formulation, energy conservation is assumed within the elements. However, computation is dependent on the geometry of the element, which varies in time. As the element becomes skewed, or distorted at large strains, it has the potential to impact on the numerically calculated energy associated with the element. The FE software necessarily performs numerical truncation to values assigned to each element, hence, it is possible that at large strains, there is a small difference in elemental energies about the weld centreline imposed by numerical truncation that satisfies energy conservation in the system. This represents a numerical instability in the solution of the PDE via the FEM. Since the applied numerical methods used in commercial FE software are proprietary, the source of this cannot be identified unambiguously. It should be noted, however, that the instability occurs after strains of 20\% are achieved in the weld. In reality, the material is likely to have fractured before these levels of strain are reached, hence, the prediction is physically non-representative at such large deformation strains. Despite the model behaving as expected up to the onset of numerical instability, the overall prediction of strain distribution and evolution varies significantly from the experimentally measured response.
 
-\paragraph{Implications for failure prediction}
+\subsubsection{Implications for failure prediction}
 \label{SMDModellingstudyResultsSims1to4Correction1Implications}
 The calibration procedures in simulation 1-2 are not reported in the public domain for precipitate hardened aluminium alloys, to the best of the author's knowledge. Hence, greater focus will be placed on simulation 3-4. 
 
@@ -543,19 +570,19 @@ Genevois et al. \cite{Genevois2006} also use the same calibration procedure in s
 
 The evolution of plastic strain in the literature is consistent with the results produced in this study, which indicate that there is a high degree of uncertainty in the predicted response. In terms of predicting failure, which is linked to the local distribution of plastic strain, it is unclear that using any form of the lumped mass method will be reliable, based on the studies presented here. In addition, given the high degree of uncertainty in failure prediction in simple uniaxial loading conditions, the efficacy of extending a lumped mass model, which is calibrated under uniaxial tension, to model failure under complex loading remains questionable. 
 
-\subsubsection{Interpretation of simulations based on the method developed in the present chapter}
+\subsection{Interpretation of simulations based on the method developed in the present chapter}
 \label{SMDModellingstudyDiscussionPropertydistributions}
 As discussed in the previous section, the lumped mass method induces intrinsic errors when applied to FE based modelling of welds; these errors are linked to the oversimplification of the true mechanical property distributions within the weld. The purpose of this complimentary study is to examine, systematically, the effects of including the complex distribution of local weld properties on the predicted strain distribution, using the method defined in \S\ref{SMDModelmethodology}. As will be discussed here, the study highlights some important requirements to successfully predict the local evolution of strain distribution. Moreover, the study will provide insight into the true distribution of mechanical properties, which could not be determined unambiguously from materials and mechanical property characterisation data. 
 
 As a useful reminder, simulations 5-7 allow the effect of local yield stress distribution to be assessed, whilst simulations 8-9 allow the effect of local work hardening response to be assessed; from these simulations, a set of optimal property distributions are identified. A mesh resolution study, simulation 10, was performed using the optimal property distributions to test the numerical reliability of the predictions. 
 
-\paragraph{Calibration}
+\subsubsection{Calibration}
 \label{SMDModellingstudyDiscussionPropertydistributionsCalibration}
 It is useful to remind the reader that, using the approach described in \S\ref{SMDModelmethodology}, the user no longer has to calibrate the size of each weld zone arbitrarily, as required by the lumped mass method. Instead, calibration is based on a metallurgical description of the weld only; the user is required to specify the loci defining the boundary between the inner and outer HAZ and the loci defining the nugget boundary. The former is based on a theoretical point of full softening, which is coincident with the hardness minima for 2139-T8, and the latter is defined by the geometry of the FSW tool probe. Each element of the weld cross section is assigned a unique constitutive model based on the local value of hardness, and the empirically estimated mechanical properties of the weld; both of these entities are found to have a characteristic distribution in the \textit{z-x} plane, which is normalised to the precipitate dissolution response of the alloy and the local thermal cycle during welding. 
 
 As a result, a more detailed distribution of properties can be captured, thereby increasing the possibility of generating representative predictions of local strain distribution. However, the method is more resource intensive, and relies on an accurate description of the characteristic mechanical property distribution in the \textit{z-x} plane; in this study the distributions are unknown and the simulated structural response is limited by the upper and lower bound property distributions. Moreover, the study is not practically achievable without automation of the process of generating input files for FE software. 
 
-\paragraph{Initial yield response}
+\subsubsection{Initial yield response}
 \label{SMDModellingstudyDiscussionPropertydistributionsYS}
 In all simulations, a linear relationship between yield stress and hardness is assumed alongside the use of a diffuse, or smooth, distribution of hardness. In simulation 5-7, the respective user input \textit{k}-parameter distribution across the weld is either constant, smooth, or stepped. Collectively, the combination of $k$ and hardness allows the diffuse distribution of initial yield stress is defined. Thus, across any element boundary, the relative difference in properties is minimised; theoretically, this attenuates the artificial increase in local elemental stiffness associated with the lumped mass method. The work hardening $B$ and $n$-parameters, are assumed to be constant. Following this approach, for simulations 5, it is expected that initial yielding will occur in the elements associated with the hardness minima, and that as the flow stress increases via work hardening, the immediately surrounding elements will begin to yield and accommodate deformation strain. The region accommodating deformation is likely to be wider than in the lumped mass method (simulation 1), and as global deformation continues, axial strain will begin to localise in the regions associated with the hardness minima either side of the weld centreline. Since the user input hardness distribution is asymmetric, it is expected that deformation will eventually localise in the elements associated with the minima on the weakest side towards the end of the simulation, i.e. the advancing side of the weld. 
 
@@ -571,7 +598,7 @@ In simulation 7, the same user inputs are used as simulation 5 except that the $
 
 The results of simulations 6-7 (figure \ref{fig:Systematicmechs}b-c) indicate that the upper bound \textit{k}-parameter distribution is a better approximation to the actual distribution in the weld; the predicted solution has better correlation with experimental observations over the early stages of deformation. From a metallurgical perspective, this may seem illogical because a step function is a purely mathematical construct, unlikely to occur in a continuous system. However, the discrete step changes in properties coincide with locations where rapid variation in the weld microstructure are observed, as described in chapter \ref{ResultsMicrostructure}. These positions relate to the theoretical point where full softening occurs and the position where grain size refinement changes rapidly due to recrystallisation. The former occurs at the interface of the inner and outer HAZ and the latter occurs within the TMAZ, which is an extremely narrow region of the microstructure. When these properties are resolved on a macro structural scale, the property variation is effectively discrete. Thus, it is unsurprising that a step function appears to be representative of the mechanical properties at a macro scale. The definition of element wise constitutive models has enabled a better overall definition of local properties compared to the lumped mass approach, hence, the effects of small variations in the user input property distribution are observable as the effect of intrinsic modelling errors is attenuated. It must be noted that the upper bound \textit{k}-parameter distribution, by definition, represents an over estimate of the mechanical properties in the weld. However, it is likely that the true \textit{k}-parameter distribution is closer to the upper bound distribution than to the lower bound. 
 
-\paragraph{Non-linear response}
+\subsubsection{Non-linear response}
 \label{SMDModellingstudyDiscussionPropertydistributionsPS}
 Simulations 8-9 are based on the optimal initial yield stress distribution obtained from simulations 5-7. Therefore, yield stress is assumed to vary linearly with hardness, the optimal distribution of hardness is assumed to be diffuse (as in simulation 5), and the optimal $k$-parameter distribution is stepped (simulation 7). In simulation 8, the plasticity distribution is defined according to the lower bound combination of $B$ and $n$-parameters; in simulation 9 the upper bound combination is used. It is expected that the whilst initial deformation occurs across the nugget region, due to the inclusion of work hardening properties, strain is accommodated across the HAZ before finally localising in the region associated with the hardness minima on the advancing side of the weld.
 
@@ -590,7 +617,7 @@ In contrast, figure \ref{fig:Systematicmechs}e (simulation 9) shows that the pre
 
 It must be noted that the result of simulation 9, by definition, represents an overestimation of the evolution of strain distribution, owing to the user input work hardening response. Thus, there must exist some quantity of error in the prediction, which is evident by direct comparison with the experimentally measured response. However, the predicted results can be considered reliable as they do correlate reasonably well with the experimentally expected results. This result also indicates that the true distribution of work hardening properties in the weld is likely to be closer to the upper bound distribution of work hardening properties. This is a reasonable suggestion because the distribution of mechanical properties lies within the upper and lower bound property distributions, which are based on microstructural and mechanical property based observations of representative weld material. In addition, the result suggests that accurate and reliable estimation of the evolution of strain distribution necessarily requires an accurate description of both the initial yield response, and the work hardening response of the weld. Given that there is correlation between the prediction and experimental measurements, on both a macro and a local scale, the method used to define the local constitutive behaviour can be assumed to be reasonably effective. 
 
-\paragraph{Implications for failure prediction}
+\subsubsection{Implications for failure prediction}
 \label{SMDModellingstudyDiscussionPropertydistributionsImplications}
 Assuming that the user input property distributions in simulation are both accurate and physically reasonable, the overall methodology must be numerically robust in order to assess the wider implications of its results. Figure \ref{fig:Systematicmechs}f shows that the numerical prediction from the mesh resolution study (simulation 10) is both qualitatively and quantitatively similar to figure \ref{fig:Systematicmechs}e (simulation 9). Initial yielding occurs within the elements associated with the nugget, TMAZ, and inner HAZ; as the local flow stress increases in these elements via work hardening, progressive yielding occurs in the immediately surrounding elements of the outer HAZ. The characteristic distribution of strain is increasing towards the centre of the weld. The characteristic distribution of strain increases up to a critical point, beyond which, strain begins to localise at the interface between the inner and outer HAZ. In addition, the overall distribution of absolute strain across the weld, and the peak values of strain, are comparable in figure \ref{fig:Systematicmechs}e-f. Hence, it can be assumed that sufficient mesh convergence has been achieved, and the prediction is relatively insensitive to mesh size. This indicates that the predictions using the method in simulation 9 are reliable from a numerical perspective.
 
@@ -598,7 +625,7 @@ In light of the numerical stability of the modelling method, it is likely that t
 
 Whilst a particular failure criterion was not considered in this case, it is likely that the method developed here would provide a more accurate estimate of failure under loading compared to predictions using the lumped mass method, for a given failure criterion. This is because the lumped mass method leads causes numerical perturbations and instabilities when used to model welds with complex mechanical property distributions. In addition, there are numerous examples, in the public domain, of the use of detailed constitutive models in the lumped mass method to improve the reliability of numerical predictions of strain \cite{Kim2010,Kim2010a,Reis2004}. These models were used to assess the failure performance of welded structures, which is directly linked to the predicted quantity of local plastic strain. Given that the numerical prediction of local strain using the lumped mass approach is dominated by erroneous over-prediction of local strains, the efficacy of improving failure assessments through implementing detailed constitutive models is questionable. The studies in this chapter have shown that a relatively simple Johnson-Cook constitutive model can be used to produce accurate predictions of strain distribution if details of the material microstructure are accounted for. Indeed, the methodology developed here has been shown to produce more reliable predictions of local strain distribution compared to the lumped mass method, and represents an improved approach to assessing structural failure of welds.
 
-\section{Chapter Summary}
+\subsection{Chapter Summary}
 \label{SMDSummary}
 In this chapter, the results of a range of numerical studies based on the FEM, which aimed to predict the evolution of local strain distribution in friction stir welded 2139-T8 when loaded in simple uniaxial tension, were presented. The studies utilised a range of methods based on the lumped mass approach, whose application in the public domain is relatively common. In addition, an automated method for implementing complex mechanical property distributions, which are related to characteristic metallurgical properties, into FE based models of welds was described. This method was utilised to systematically study the effects of including details of local initial yield stress and work hardening response. Collectively, the studies indicated that simulations based on the lumped mass method enhanced intrinsic errors in the FEM, and that it could not be used to provide good quantitative correlation, on a local scale, with the experimentally measured strain response. Moreover, the numerical studies using the approach presented here indicate that successful FE based modelling of welds necessarily requires accurate definition of the local distribution of initial local yield stress and work hardening response. In addition, the studies provided an insight into the true nature of the distribution of mechanical properties, which tend to be diffuse in the outer regions of the HAZ, and more discrete in the inner regions of the inner HAZ, TMAZ, and nugget; this observation correlates with microstructural characterisation of the welded described in chapter \ref{ResultsMicrostructure} and the known link between microstructure and mechanical properties. The method presented here represents an improvement in numerical modelling approach, and has the theoretical property of being insensitive to either the loading configuration or geometric scaling. This also represents an improvement over existing lumped mass techniques, however, this property is tested in chapter \ref{ResultsApplications}.
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
@@ -643,7 +670,8 @@ The authors acknowledge the funding granted from EPSRC via the Advanced Metallic
 \section*{References}
   \bibliographystyle{elsarticle-num} 
   %Referencing system for in the office....
-  \bibliography{C:/Users/mbgm6aab/Documents/AdvancedMetallicSystemsCDT/PhD/Papers/library}
+%  \bibliography{C:/Users/mbgm6aab/Documents/AdvancedMetallicSystemsCDT/PhD/Papers/library}
+  	\bibliography{Bibliography/libraryFINALEDITHUGHSHERCLIFFCORRECTIONS}
  %Referencing system for home....
   %\bibliography{C:/Users/Public/Documents/AdvancedMetallicSystemsCDT/PhD/Papers/library}
 
